# IlstmCharsRecognize

./: .gitignore  CMakeLists.txt  test.cpp
ctc/: CMakeLists.txt
ctc/include/: cpu_ctc.h  ctc.h  ctcpp.h
ctc/src/: ctcpp_entrypoint.cpp
include/: CharsRecognize.h  ICharsRecognize.h
src/: CharsRecognize.cpp
